// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Service when searching user accounts will allow pagination 1`] = `
[
  "Malcolm89",
  "Marie28",
  "Minerva.Olson",
  "Nigel_Herman30",
  "Norris_Kshlerin60",
  "Okey84",
  "Oscar.Kling5",
  "Reina54",
  "Rene47",
  "Rhianna.Terry",
  "Sean_Ruecker",
  "Sigurd_Reinger55",
]
`;

exports[`Admin Service when searching user accounts will filter results by role admin 1`] = `
{
  "totalCount": 5,
  "users": [
    {
      "role": "admin",
      "username": "Bryana.Glover",
    },
    {
      "role": "admin",
      "username": "Bryce_Thompson97",
    },
    {
      "role": "admin",
      "username": "Caesar71",
    },
    {
      "role": "admin",
      "username": "Harold_Lebsack20",
    },
    {
      "role": "admin",
      "username": "Larue_Denesik32",
    },
  ],
}
`;

exports[`Admin Service when searching user accounts will filter results by role user 1`] = `
{
  "totalCount": 95,
  "users": [
    {
      "role": "user",
      "username": "Aaron_Wehner28",
    },
    {
      "role": "user",
      "username": "Aiyana.McCullough",
    },
    {
      "role": "user",
      "username": "Alessia.Upton8",
    },
    {
      "role": "user",
      "username": "Aliyah.Kunde4",
    },
    {
      "role": "user",
      "username": "Amara.Cummings13",
    },
    {
      "role": "user",
      "username": "Ashly71",
    },
    {
      "role": "user",
      "username": "Ashlynn_Kreiger86",
    },
    {
      "role": "user",
      "username": "Audreanne.Larkin79",
    },
    {
      "role": "user",
      "username": "Ayla.Rippin",
    },
    {
      "role": "user",
      "username": "Barrett_Stracke77",
    },
    {
      "role": "user",
      "username": "Bell_Herzog",
    },
    {
      "role": "user",
      "username": "Bernadette_Kihn",
    },
    {
      "role": "user",
      "username": "Bernhard54",
    },
    {
      "role": "user",
      "username": "Braulio19",
    },
    {
      "role": "user",
      "username": "Breanne_Cummings",
    },
    {
      "role": "user",
      "username": "Brigitte.Kihn",
    },
    {
      "role": "user",
      "username": "Bulah_Bins",
    },
    {
      "role": "user",
      "username": "Casimir_DuBuque",
    },
    {
      "role": "user",
      "username": "Charley.Corkery2",
    },
    {
      "role": "user",
      "username": "Chaya.Feeney",
    },
    {
      "role": "user",
      "username": "Clarabelle_Funk69",
    },
    {
      "role": "user",
      "username": "Danielle56",
    },
    {
      "role": "user",
      "username": "Deanna_Mante68",
    },
    {
      "role": "user",
      "username": "Delphia.Rohan22",
    },
    {
      "role": "user",
      "username": "Destin74",
    },
    {
      "role": "user",
      "username": "Donato99",
    },
    {
      "role": "user",
      "username": "Donnell51",
    },
    {
      "role": "user",
      "username": "Donnell_Abbott",
    },
    {
      "role": "user",
      "username": "Dorothy.Hahn",
    },
    {
      "role": "user",
      "username": "Drew75",
    },
  ],
}
`;

exports[`Admin Service when searching user accounts will perform a text-based search 1`] = `
{
  "data": [
    {
      "accountTier": 0,
      "email": "Bryce_Thompson47@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "6f8f977c-5034-4ca2-90ce-36a8bead0678",
      "isLockedOut": false,
      "lastLogin": 1708500911363,
      "lastPasswordChange": 1698591538205,
      "memberSince": 1610623483236,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/108.jpg",
        "bio": "Quasi dolores aperiam saepe deserunt recusandae illum voluptatem. Quae sapiente aut corrupti debitis. Nam animi soluta fugit illum illum laborum debitis numquam. Rem modi modi aliquam. Error eligendi doloremque est iure. Voluptatibus recusandae fugiat dicta vero consequatur reiciendis. Incidunt porro culpa nisi ad inventore est perspiciatis fugiat laboriosam.",
        "experienceLevel": "Beginner",
        "location": "Alexandria",
        "logBookSharing": "private",
        "memberSince": 1610623483236,
        "name": "Taylor Bailey",
        "startedDiving": "2020",
        "userId": "6f8f977c-5034-4ca2-90ce-36a8bead0678",
        "username": "Bryce_Thompson97",
      },
      "role": "admin",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Bryce_Thompson97",
    },
    {
      "accountTier": 0,
      "email": "Lurline.Abshire53@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "75085a9d-f991-4570-b489-5f879537255d",
      "isLockedOut": false,
      "lastLogin": 1708831617320,
      "lastPasswordChange": 1709573542422,
      "memberSince": 1652402272945,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/682.jpg",
        "bio": "Illo eligendi voluptate reiciendis magni nam perferendis dolor molestiae. Totam odio quia sequi. Nulla aspernatur atque similique corporis adipisci itaque necessitatibus voluptate ea. Rerum occaecati perspiciatis placeat ducimus nostrum perferendis. Voluptate vitae enim voluptates. Tenetur ut perspiciatis tenetur cupiditate. Iste blanditiis corrupti nulla.",
        "experienceLevel": "Expert",
        "location": "Taylor",
        "logBookSharing": "private",
        "memberSince": 1652402272945,
        "name": "Ms. Sophie Anderson",
        "startedDiving": "2015",
        "userId": "75085a9d-f991-4570-b489-5f879537255d",
        "username": "Lurline96",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Lurline96",
    },
  ],
  "totalCount": 2,
}
`;

exports[`Admin Service when searching user accounts will return a list of users 1`] = `
{
  "data": [
    {
      "accountTier": 0,
      "email": "Aaron_Wehner14@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "5e1c2714-ad34-418f-9840-df005c61ead9",
      "isLockedOut": false,
      "lastLogin": 1709621268091,
      "lastPasswordChange": 1702430090426,
      "memberSince": 1641207979499,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/92.jpg",
        "bio": "Ipsum debitis totam cum et commodi impedit atque beatae hic. Nobis praesentium praesentium minima doloribus. Hic ea velit repellendus adipisci ea labore animi. Blanditiis vero quis assumenda non accusamus impedit ullam. Consequuntur unde similique.",
        "experienceLevel": "Beginner",
        "location": "Dubuque",
        "logBookSharing": "private",
        "memberSince": 1641207979499,
        "name": "Doyle Oberbrunner V",
        "startedDiving": "2011",
        "userId": "5e1c2714-ad34-418f-9840-df005c61ead9",
        "username": "Aaron_Wehner28",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Aaron_Wehner28",
    },
    {
      "accountTier": 0,
      "email": "Aiyana.McCullough@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "007f3635-e492-4a43-83e5-55de54b4e3fd",
      "isLockedOut": false,
      "lastLogin": 1708799253512,
      "lastPasswordChange": 1671682655528,
      "memberSince": 1613190381255,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1160.jpg",
        "bio": "Expedita reprehenderit inventore. Ratione nostrum soluta voluptates nulla. Ducimus cupiditate maxime nesciunt libero quam tenetur. Quibusdam vitae saepe sit dolore alias magni hic. Doloremque aut aliquam quidem. Tempore esse asperiores quasi at ipsam eum eos adipisci.",
        "experienceLevel": "Experience",
        "location": "Hialeah",
        "logBookSharing": "private",
        "memberSince": 1613190381255,
        "name": "Rodney Turner",
        "startedDiving": "1995",
        "userId": "007f3635-e492-4a43-83e5-55de54b4e3fd",
        "username": "Aiyana.McCullough",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Aiyana.McCullough",
    },
    {
      "accountTier": 0,
      "email": "Alessia_Upton@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "e8c59a17-31db-4ad0-8b7b-71873c39281e",
      "isLockedOut": false,
      "lastLogin": 1708122231470,
      "lastPasswordChange": 1646909024501,
      "memberSince": 1540010409678,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/390.jpg",
        "bio": "Veritatis harum numquam fugit. Ullam laborum corporis assumenda voluptatibus ipsum iusto suscipit delectus. Eligendi cumque vitae nisi voluptatibus et. Ullam fuga animi. Ullam minima veritatis fugiat adipisci corporis. Molestias pariatur error.",
        "experienceLevel": "Professional",
        "location": "Azusa",
        "logBookSharing": "private",
        "memberSince": 1540010409678,
        "name": "Megan Ankunding",
        "startedDiving": "2007",
        "userId": "e8c59a17-31db-4ad0-8b7b-71873c39281e",
        "username": "Alessia.Upton8",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Alessia.Upton8",
    },
    {
      "accountTier": 0,
      "email": "Aliyah72@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "df272310-96df-449a-bb4e-8663dea787f3",
      "isLockedOut": false,
      "lastLogin": 1708898801969,
      "lastPasswordChange": 1668316156944,
      "memberSince": 1661935382480,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/535.jpg",
        "bio": "Explicabo molestias sed quam eaque deleniti. Eius quibusdam ipsam reprehenderit provident sit voluptates occaecati dignissimos sit. Enim quibusdam repellat quo odit modi. Molestias accusantium vero ea magnam perspiciatis corrupti. Eius id accusamus ipsa sunt exercitationem voluptatum possimus.",
        "experienceLevel": "Novice",
        "location": "Carson City",
        "logBookSharing": "private",
        "memberSince": 1661935382480,
        "name": "Clint Lindgren",
        "startedDiving": "2013",
        "userId": "df272310-96df-449a-bb4e-8663dea787f3",
        "username": "Aliyah.Kunde4",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Aliyah.Kunde4",
    },
    {
      "accountTier": 0,
      "email": "Amara.Cummings@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "cbbdc55c-4f64-4fdf-ac63-5c42cfd80607",
      "isLockedOut": false,
      "lastLogin": 1708093657788,
      "lastPasswordChange": 1703657438079,
      "memberSince": 1561799016186,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1109.jpg",
        "bio": "Voluptatem tempora dolorum ipsa occaecati similique. Et reiciendis sapiente libero vitae aperiam expedita atque. Voluptatum vero et maxime corporis vero eligendi quod facilis dolorum. Nisi officia officia fugiat quasi. Iusto possimus quos vel magni et. Ipsam esse ut laudantium.",
        "experienceLevel": "Experience",
        "location": "Eau Claire",
        "logBookSharing": "private",
        "memberSince": 1561799016186,
        "name": "Alvin Stark",
        "startedDiving": "2020",
        "userId": "cbbdc55c-4f64-4fdf-ac63-5c42cfd80607",
        "username": "Amara.Cummings13",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Amara.Cummings13",
    },
    {
      "accountTier": 0,
      "email": "Ashly.Daugherty@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "f449ef5a-6fb9-4459-8cdd-8cf813a0b820",
      "isLockedOut": false,
      "lastLogin": 1707852875945,
      "lastPasswordChange": 1703117602352,
      "memberSince": 1669930895894,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1184.jpg",
        "bio": "Totam temporibus quaerat vel voluptates vel rem nisi cupiditate repellendus. Minus quod consectetur totam sapiente maiores deleniti. Cupiditate quaerat mollitia ipsa ullam placeat quod ut incidunt. Vero saepe reiciendis laborum reprehenderit quis non mollitia. Voluptates commodi facere exercitationem assumenda qui blanditiis quia laboriosam. Fugiat voluptates atque voluptate commodi cumque rem fugiat perspiciatis. Pariatur similique similique. Veniam veritatis mollitia distinctio repudiandae dolorum libero quia rerum.",
        "experienceLevel": "Expert",
        "location": "Strongsville",
        "logBookSharing": "private",
        "memberSince": 1669930895894,
        "name": "Miss Raymond O'Conner",
        "startedDiving": "2002",
        "userId": "f449ef5a-6fb9-4459-8cdd-8cf813a0b820",
        "username": "Ashly71",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Ashly71",
    },
    {
      "accountTier": 0,
      "email": "Ashlynn_Kreiger50@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "e8086bb6-10a8-4070-abb9-965acdc04ea3",
      "isLockedOut": false,
      "lastLogin": 1709163783509,
      "lastPasswordChange": 1706321149054,
      "memberSince": 1559027907652,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg",
        "bio": "Dolore molestiae architecto repellendus. Doloribus veritatis omnis. Accusantium maxime iure id in deserunt consequatur. Quidem optio provident quaerat ex. Culpa impedit minima quia repellendus ratione sapiente odit non praesentium. Cupiditate nobis magni aut autem soluta.",
        "experienceLevel": "Novice",
        "location": "Danville",
        "logBookSharing": "private",
        "memberSince": 1559027907652,
        "name": "Tracy Botsford",
        "startedDiving": "1999",
        "userId": "e8086bb6-10a8-4070-abb9-965acdc04ea3",
        "username": "Ashlynn_Kreiger86",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Ashlynn_Kreiger86",
    },
    {
      "accountTier": 0,
      "email": "Audreanne41@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "9d72ecc0-b240-47c9-9d42-e6d196a3383f",
      "isLockedOut": false,
      "lastLogin": 1707859894532,
      "lastPasswordChange": 1648667234944,
      "memberSince": 1550440627852,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1182.jpg",
        "bio": "Corporis dolor atque. Hic similique earum deleniti optio repellat consequatur eaque cum. Facere id ducimus adipisci eum ducimus voluptatem odio voluptatem deleniti. Sint maiores officia temporibus labore. Officia perspiciatis at eveniet sapiente. Assumenda pariatur veniam officiis dolorem corrupti. Quis similique aut voluptatum fugiat ipsam nam.",
        "experienceLevel": "Novice",
        "location": "Evanston",
        "logBookSharing": "private",
        "memberSince": 1550440627852,
        "name": "Mrs. Israel Stracke",
        "startedDiving": "2001",
        "userId": "9d72ecc0-b240-47c9-9d42-e6d196a3383f",
        "username": "Audreanne.Larkin79",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Audreanne.Larkin79",
    },
    {
      "accountTier": 0,
      "email": "Ayla43@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "isLockedOut": false,
      "lastLogin": 1708123249027,
      "lastPasswordChange": 1672022198003,
      "memberSince": 1582583450944,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "bio": "Reiciendis debitis voluptatem veritatis dolore. Recusandae aspernatur quas molestiae in tempore eligendi distinctio ipsa cupiditate. Voluptatibus commodi eum nulla sint. Aperiam culpa blanditiis cumque provident asperiores magni ea mollitia. Quos velit id. Earum dolorum velit eveniet ipsa doloremque. Omnis dignissimos ea qui rerum soluta explicabo deserunt veniam.",
        "experienceLevel": "Expert",
        "location": "West Covina",
        "logBookSharing": "private",
        "memberSince": 1582583450944,
        "name": "Devin Ratke",
        "startedDiving": "2006",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Ayla.Rippin",
    },
    {
      "accountTier": 0,
      "email": "Barrett.Stracke@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "959eb386-3ca8-42e1-9ce8-750a80e787eb",
      "isLockedOut": false,
      "lastLogin": 1708968937158,
      "lastPasswordChange": 1656565744006,
      "memberSince": 1684744043626,
      "profile": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1096.jpg",
        "bio": "Consequatur consequatur quos ipsa inventore minima ducimus. Amet voluptas maxime quod placeat accusantium iste temporibus occaecati nostrum. Deleniti accusamus doloremque est voluptas quaerat quod. Illo autem nam quidem ipsa iusto. Ipsum reprehenderit eius veniam dolorem.",
        "experienceLevel": "Professional",
        "location": "Boise City",
        "logBookSharing": "private",
        "memberSince": 1684744043626,
        "name": "Justin Davis",
        "startedDiving": "2009",
        "userId": "959eb386-3ca8-42e1-9ce8-750a80e787eb",
        "username": "Barrett_Stracke77",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Barrett_Stracke77",
    },
  ],
  "totalCount": 100,
}
`;

exports[`Admin Service when searching user accounts will sort results by memberSince in asc order 1`] = `
{
  "totalCount": 100,
  "users": [
    {
      "memberSince": 2018-03-19T11:29:22.558Z,
      "username": "Gardner.Johnson74",
    },
    {
      "memberSince": 2018-04-19T21:25:00.549Z,
      "username": "Brigitte.Kihn",
    },
    {
      "memberSince": 2018-04-20T20:37:07.766Z,
      "username": "Lorenz59",
    },
    {
      "memberSince": 2018-05-13T22:06:14.604Z,
      "username": "Casimir_DuBuque",
    },
    {
      "memberSince": 2018-06-25T23:18:47.167Z,
      "username": "Lucy55",
    },
    {
      "memberSince": 2018-07-18T13:52:01.897Z,
      "username": "Donato99",
    },
    {
      "memberSince": 2018-07-20T15:41:36.849Z,
      "username": "Leonardo35",
    },
    {
      "memberSince": 2018-07-22T12:29:38.317Z,
      "username": "Kareem90",
    },
    {
      "memberSince": 2018-09-17T04:34:19.609Z,
      "username": "Dorothy.Hahn",
    },
    {
      "memberSince": 2018-10-09T05:39:37.418Z,
      "username": "Delphia.Rohan22",
    },
    {
      "memberSince": 2018-10-20T04:40:09.678Z,
      "username": "Alessia.Upton8",
    },
    {
      "memberSince": 2018-11-01T15:29:20.898Z,
      "username": "Rhianna.Terry",
    },
    {
      "memberSince": 2018-11-17T10:11:45.627Z,
      "username": "Kelsi26",
    },
    {
      "memberSince": 2018-11-21T03:30:20.378Z,
      "username": "Jamie16",
    },
    {
      "memberSince": 2018-12-26T21:22:15.314Z,
      "username": "Caesar71",
    },
  ],
}
`;

exports[`Admin Service when searching user accounts will sort results by memberSince in desc order 1`] = `
{
  "totalCount": 100,
  "users": [
    {
      "memberSince": 2024-03-03T00:29:00.081Z,
      "username": "Steve54",
    },
    {
      "memberSince": 2024-01-22T09:55:07.775Z,
      "username": "Lavonne0",
    },
    {
      "memberSince": 2023-12-07T15:19:18.511Z,
      "username": "Erick_Roberts",
    },
    {
      "memberSince": 2023-11-21T22:50:56.464Z,
      "username": "Marie28",
    },
    {
      "memberSince": 2023-10-02T23:57:14.826Z,
      "username": "Eleonore.Hilpert",
    },
    {
      "memberSince": 2023-08-05T13:09:34.040Z,
      "username": "Linwood.Stark",
    },
    {
      "memberSince": 2023-07-26T22:28:03.294Z,
      "username": "Jefferey_Davis41",
    },
    {
      "memberSince": 2023-06-15T09:05:46.140Z,
      "username": "Kendra.Haag",
    },
    {
      "memberSince": 2023-06-11T09:01:09.171Z,
      "username": "Bulah_Bins",
    },
    {
      "memberSince": 2023-06-04T11:35:31.480Z,
      "username": "Jeffry_Kuphal38",
    },
    {
      "memberSince": 2023-05-22T08:27:23.626Z,
      "username": "Barrett_Stracke77",
    },
    {
      "memberSince": 2023-05-09T21:01:23.626Z,
      "username": "Harold_Lebsack20",
    },
    {
      "memberSince": 2023-04-12T21:55:47.341Z,
      "username": "Kirstin52",
    },
    {
      "memberSince": 2023-03-24T09:52:37.562Z,
      "username": "Donnell51",
    },
    {
      "memberSince": 2023-03-18T21:23:30.000Z,
      "username": "Chaya.Feeney",
    },
  ],
}
`;

exports[`Admin Service when searching user accounts will sort results by username in asc order 1`] = `
{
  "totalCount": 100,
  "users": [
    {
      "memberSince": 2022-01-03T11:06:19.499Z,
      "username": "Aaron_Wehner28",
    },
    {
      "memberSince": 2021-02-13T04:26:21.255Z,
      "username": "Aiyana.McCullough",
    },
    {
      "memberSince": 2018-10-20T04:40:09.678Z,
      "username": "Alessia.Upton8",
    },
    {
      "memberSince": 2022-08-31T08:43:02.480Z,
      "username": "Aliyah.Kunde4",
    },
    {
      "memberSince": 2019-06-29T09:03:36.186Z,
      "username": "Amara.Cummings13",
    },
    {
      "memberSince": 2022-12-01T21:41:35.894Z,
      "username": "Ashly71",
    },
    {
      "memberSince": 2019-05-28T07:18:27.652Z,
      "username": "Ashlynn_Kreiger86",
    },
    {
      "memberSince": 2019-02-17T21:57:07.852Z,
      "username": "Audreanne.Larkin79",
    },
    {
      "memberSince": 2020-02-24T22:30:50.944Z,
      "username": "Ayla.Rippin",
    },
    {
      "memberSince": 2023-05-22T08:27:23.626Z,
      "username": "Barrett_Stracke77",
    },
    {
      "memberSince": 2019-11-30T06:19:48.587Z,
      "username": "Bell_Herzog",
    },
    {
      "memberSince": 2022-02-24T10:45:52.314Z,
      "username": "Bernadette_Kihn",
    },
    {
      "memberSince": 2021-06-22T21:35:37.567Z,
      "username": "Bernhard54",
    },
    {
      "memberSince": 2020-10-25T14:48:30.836Z,
      "username": "Braulio19",
    },
    {
      "memberSince": 2022-05-01T21:17:29.093Z,
      "username": "Breanne_Cummings",
    },
  ],
}
`;

exports[`Admin Service when searching user accounts will sort results by username in desc order 1`] = `
{
  "totalCount": 100,
  "users": [
    {
      "memberSince": 2022-06-20T01:36:16.997Z,
      "username": "Winona.Doyle",
    },
    {
      "memberSince": 2020-04-08T12:22:42.152Z,
      "username": "Tyler30",
    },
    {
      "memberSince": 2021-11-03T23:21:09.613Z,
      "username": "Trey.Langosh",
    },
    {
      "memberSince": 2020-12-24T06:16:47.642Z,
      "username": "Tomasa33",
    },
    {
      "memberSince": 2019-05-01T03:13:57.366Z,
      "username": "Sven_White",
    },
    {
      "memberSince": 2024-03-03T00:29:00.081Z,
      "username": "Steve54",
    },
    {
      "memberSince": 2021-02-27T16:49:44.220Z,
      "username": "Stephany76",
    },
    {
      "memberSince": 2020-10-04T13:42:59.298Z,
      "username": "Sonya.Hintz0",
    },
    {
      "memberSince": 2022-02-12T23:12:59.931Z,
      "username": "Sigurd_Reinger55",
    },
    {
      "memberSince": 2020-11-02T13:33:22.544Z,
      "username": "Sean_Ruecker",
    },
    {
      "memberSince": 2018-11-01T15:29:20.898Z,
      "username": "Rhianna.Terry",
    },
    {
      "memberSince": 2022-04-07T18:19:09.373Z,
      "username": "Rene47",
    },
    {
      "memberSince": 2022-03-28T18:30:41.189Z,
      "username": "Reina54",
    },
    {
      "memberSince": 2023-02-09T21:55:54.648Z,
      "username": "Oscar.Kling5",
    },
    {
      "memberSince": 2021-04-03T02:46:49.858Z,
      "username": "Okey84",
    },
  ],
}
`;
